fix: handle multimodality