@@ -44,6 +44,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>25</maven.compiler.release>
         <junit-jupiter-api.version>6.0.2</junit-jupiter-api.version>
         <assertj-core.version>3.27.7</assertj-core.version>
         <llama.cpp.version>b7943</llama.cpp.version>
@@ -115,8 +116,72 @@
                                         <argument>${llama.cpp.dir}/ggml/include</argument>
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}/generated-sources</argument>
+                                        <argument>--header-class-name</argument>
+                                        <argument>llama_h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd.h</argument>
                                         <argument>${llama.cpp.dir}/include/llama.h</argument>
                                     </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        <artifactId>replacer</artifactId>
+                        <version>1.5.3</version>
+                        <executions>
+                            <execution>
+                                <id>fix-ggml-layout-linux</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/linux/x86_64/llama_h.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>ggml_backend_graph_copy\.layout\(\)</token>
+                                            <value>io.gravitee.llama.cpp.linux.x86_64.ggml_backend_graph_copy.layout()</value>
+                                        </replacement>
+                                    </replacements>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_1-linux</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/linux/x86_64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_1 extends</token>
+                                            <value>public class llama_h_1 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                    <quiet>true</quiet>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_2-linux</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/linux/x86_64/llama_h_2.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_2 extends</token>
+                                            <value>public class llama_h_2 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                    <quiet>true</quiet>
                                 </configuration>
                             </execution>
                         </executions>
@@ -185,8 +250,14 @@
                                         <argument>io.gravitee.llama.cpp.macosx.aarch64</argument>
                                         <argument>--include-dir</argument>
                                         <argument>${llama.cpp.dir}/ggml/include</argument>
+                                        <argument>--include-dir</argument>
+                                        <argument>${llama.cpp.dir}/include</argument>
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}/generated-sources</argument>
+                                        <argument>--header-class-name</argument>
+                                        <argument>llama_h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd.h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd-helper.h</argument>
                                         <argument>${llama.cpp.dir}/include/llama.h</argument>
                                     </arguments>
                                 </configuration>
@@ -199,21 +270,58 @@
                         <version>1.5.3</version>
                         <executions>
                             <execution>
+                                <id>fix-ggml-layout-macos</id>
                                 <phase>generate-sources</phase>
                                 <goals>
                                     <goal>replace</goal>
                                 </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>ggml_backend_graph_copy\.layout\(\)</token>
+                                            <value>io.gravitee.llama.cpp.macosx.aarch64.ggml_backend_graph_copy.layout()</value>
+                                        </replacement>
+                                    </replacements>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_1-macos</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_1 extends</token>
+                                            <value>public class llama_h_1 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_2-macos</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_2.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_2 extends</token>
+                                            <value>public class llama_h_2 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                </configuration>
                             </execution>
                         </executions>
-                        <configuration>
-                            <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h.java</file>
-                            <replacements>
-                                <replacement>
-                                    <token>ggml_backend_graph_copy\.layout\(\)</token>
-                                    <value>io.gravitee.llama.cpp.macosx.aarch64.ggml_backend_graph_copy.layout()</value>
-                                </replacement>
-                            </replacements>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -263,15 +371,15 @@
                     <licenseSets>
                         <licenseSet>
                             <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
-                    <excludes>
-                        <exclude>CONTRIBUTING.adoc</exclude>
-                        <exclude>LICENSE.txt</exclude>
-                        <exclude>.circleci/config.yml</exclude>
-                        <exclude>README.md</exclude>
-                        <exclude>SECURITY.md</exclude>
-                        <exclude>.gravitee.settings.xml</exclude>
-                        <exclude>.jextract/**</exclude>
-                    </excludes>
+                            <excludes>
+                                <exclude>CONTRIBUTING.adoc</exclude>
+                                <exclude>LICENSE.txt</exclude>
+                                <exclude>.circleci/config.yml</exclude>
+                                <exclude>README.md</exclude>
+                                <exclude>SECURITY.md</exclude>
+                                <exclude>.gravitee.settings.xml</exclude>
+                                <exclude>.jextract/**</exclude>
+                            </excludes>
                         </licenseSet>
                     </licenseSets>
                     <mapping>
@@ -293,10 +401,22 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>io.gravitee.llama.cpp.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
